RocketChatInverted.css
/***********

Userstyle for Rocket Chat https://demo.rocket.chat/ 
Created by: JakeBathman
Based on: https://userstyles.org/styles/133150/rocketchat-dark
Repository: https://github.com/jakebathman/Rocket-Chat-Inverted
Licence: MIT
Version: v1.0.0 

***********/

code {
    font-family: Monaco, Menlo, Consolas, "Courier New", monospace !important;
}

.account-box .info {
    background-color: #0c0c0c !important;
}

.side-nav .rooms-list {
    background-color: #171717 !important;
}

.side-nav .unread-rooms {
    background-color: #6D6D6D !important;
}

.side-nav .unread {
    background-color: #6D6D6D !important;
}

.side-nav .footer {
    background-color: #0c0c0c !important;
}

.fixed-title {
    background-color: #0c0c0c !important;
    color: white !important;
    border-bottom-color: #696969;
}

.messages-box {
    background-color: #252525;
}

.messages-box ul {
    color: #CDCDCD;
}

.messages-box ul > li.message:nth-child(odd) {
    background-color: #252525;
}

.messages-box ul > li.message:nth-child(even) {
    background-color: #252525;
}

.message .user {
    color: #D0D0D0;
}

div.body a {
    color: #D0D0D0 !important;
}

.message.new-day:before {
    background-color: #424242 !important;
    color: #EEEEEE;
    font-size: 1.1em;
}

.message.new-day:after {
    border-top-color: #424242;
}

.message .user:hover {
    color: #EEEEEE;
}

.messages-container .footer {
    background-color: #0c0c0c !important;
    border-top-color: #696969;
}

.messages-container .message-form>div>.file {
    background-color: #2b2c2f !important;
    border-color: #999 !important;
}

.messages-container .message-form textarea {
    background-color: #2b2c2f !important;
    border-color: #696969;
    color: #EEEEEE;
}

.messages-container .message-form.editing {
    border: 1px solid #E6DE0A !important;
}

.icon-paper-plane, .send-button {
    background-color: #434343 !important;
}

.flex-tab-bar, .tab-button {
    background-color: #0c0c0c !important;
    border-color: #545454 !important;
    color: #a2a2a2;
}

.flex-tab-bar {
    background-color: #171717 !important;
}

.message.new-day .day-divider {
    background-color: #1e2125;
}

.flex-tab .content>div, .content, .flex-tab .message.new-day .day-divider {
    background-color: #1e2125 !important;
    color: white;
}

.message.new-day .day-divider span, .flex-tab .message.new-day .day-divider span {
    background-color: #696969;
    color: white;
}


/* ---Message InputBox--- */

.messages-container .message-form .stream-info {
    background: #0c0c0c;
}

.messages-container .message-form>.message-input>.file, .messages-container .message-form>.message-input .message-buttons, .messages-container .message-form>.message-input {
    color: #a2a2a2;
    background-color: #2b2c2f;
    border-color: #0c0c0c;
    border-radius: 0px;
}

.messages-container {
    border-right-color: #0c0c0c;
}

.message .info .is-bot, .message .info .role-tag, .user-view .info .role-tag {
    background-color: #4F4F4F;
}

.list-view.uploaded-files-list i {
    color: #fff;
}


/* ---Made the code box dark--- */

.hljs, code {
    background: #1f1f1f;
    color: #fff;
    border-color: #636363;
}


/* ---Syntax Highlighting Patches--- */

.hljs-deletion {
    background: #903a3a;
}

.hljs-addition {
    background: #2b842b;
}

.hljs-tag {
    color: #ffb0e2;
}


/* ---Fixed icons to make them more viewable on dark background--- */

.message .message-dropdown ul li {
    color: #fbfbfb;
}

.message .message-dropdown {
    background-color: rgba(255, 255, 255, 0);
    border: 1px solid #555555;
}


/* ---Made message edit options dark on selection and highlight--- */

.message .message-dropdown ul li:hover, .message .message-dropdown ul li:first-child {
    background-color: #1d1c1c;
}


/* ---Prevent page from blasting white in your face when loading--- */

#rocket-chat {
    background-color: #0c0c0c;
}

.messages-container .message-form .formatting-tips {
    color: #fff;
}

.messages-container .message-form .users-typing {
    color: #fff;
    background-color: inherit;
}


/* ---Fix Dark Links--- */

a {
    color: #33fdff;
}

a:hover {
    color: #fff;
}


/* ---Edit Message--- */

.messages-box .editing .body {
    background-color: #696969;
    color: white;
}


/* ---Fix Admin Area--- */

.flex-tab .content>div, .content, .flex-tab .message.new-day .day-divider {
    background-color: #191919 !important;
    color: #a2a3a5;
}

.statistics-table {
    border-color: #696969;
}

.statistics-table tr {
    background-color: #191919;
}

.statistics-table tr:nth-of-type(even) {
    background-color: #24282d;
}

.page-settings .section {
    background-color: #191919;
    color: white;
}

.page-settings .section .section-content .input-line>label {
    color: white;
}

.page-list .list table tbody tr:nth-child(odd) {
    background-color: #282c31;
}

.page-list .list table tbody tr.row-link:hover {
    background-color: #4c4c4c;
}


/* ---Searchbox on Rooms Admin--- */

textarea, select, input[type='text'], input[type='number'], input[type='email'], input[type='url'], input[type='password'], input[type='time'] {
    border-color: #696969;
    background-color: #131313;
    color: white;
    border-radius: 0px;
}


/* ---Admin Intergrations Page--- */

.admin-integrations-new-panel .admin-integrations-new-item:hover {
    background-color: #4c4c4c;
}

.admin-integrations-new-panel .admin-integrations-new-item {
    color: #fff;
}

.input-line>label {
    color: #fff;
}

.page-settings .section .section-content .input-line input {
    color: #fff;
    background-color: #1e2125 !important;
}

.page-settings .section .section-title {
    color: #a2a2a2;
}

.page-settings .content {
    color: #9a9a9a;
}


/* ---Disabled Input Boxes--- */

input[readonly], input[disabled], textarea[readonly], textarea[disabled] {
    background-color: #424242 !important;
    color: #9e9e9e;
}


/* ---Alert--- */

.page-settings .section .section-content .input-line .settings-alert {
    background-color: #000000;
    border: 1px solid #ff0000;
    color: red;
}


/* ---Permission Table--- */

.permissions-manager .permission-grid thead tr {
    background-color: #4c4c4c;
}

.permissions-manager .permission-grid td * {
    color: #fff;
}


/* ---Buttons--- */

.button, .button-primary, .button.secondary {
    background-color: #2b2e33 !important;
    color: #adadad !important;
}

.button:hover, .button-primary:hover, .button.secondary:hover {
    background-color: #3C3C3C !important;
    color: #BCBCBC !important;
}

.messages-container .message-form>.message-input>.file:hover, .messages-container .message-form>.message-input .message-buttons:hover {
    color: white;
    background-color: #0c0c0c;
}


/* ---Video Input Popup Box--- */

.vrec-dialog {
    background-color: #1e2125;
}


/* ---Unread Message Bar and Marker---*/

.container-bars .unread-bar {
    background-color: #333;
    color: #068fe4;
}

.first-unread .body::before {
    background-color: #2c7fc6;
    left: 20px;
    height: 1px;
}

.first-unread .body::after {
    color: #ffffff;
    background-color: #2c7fc6;
    content: "UNREAD MESSAGES";
    display: block;
    position: absolute;
    right: 0;
    top: -15px;
    font-size: 11px;
    line-height: 17px;
    padding: 1px 6px;
    -webkit-transition: color 0.5s linear;
    transition: color 0.5s linear;
    left: inherit;
}

.first-unread.first-unread-opaque .body::before {
    background-color: #2c7fc6;
}

.first-unread.first-unread-opaque .body::after {
    color: #ffffff;
    background-color: #2c7fc6;
}


/* ---Emoji Picker--- */

.emoji-picker {
    background-color: #1e2125;
}

.emoji-picker .filter>ul>li, .emoji-picker .filter>ul>li:hover {
    border-bottom: 2px solid #1e2125;
}

.emoji-picker .filter>ul>li.active {
    border-bottom: 2px solid #ffffff;
}

ul.reactions li.selected {
    background-color: #464646 !important;
}

ul.reactions li:not(.selected) {
    background-color: rgba(255, 255, 255, 0) !important;
    border: 1px solid #444444 !important;
}


/* ---Avatar Selection--- */

.avatar-suggestion-item {
    background-color: #1e2125;
    border-color: #696969;
}


/* ---Fix white login page text--- */

#login-card .input-text input, #login-card .input-text select {
    color: black;
}


/* ---Fix mention color to stand out--- */

.body a.mention-link {
    color: #70bdff !important;
    font-weight: bold !important;
}

.body a.mention-link-me {
    color: #ffffff !important;
    background-color: #2C7FC6 !important;
    font-weight: normal !important;
}


/* ---Text highlight styling--- */

.highlight-text {
    background-color: #efdd62;
    color: #000000;
}

.account-box .options, .side-nav .options button {
    background-color: #111111;
}

.account-box .options button, .account-box .options a {
    border-bottom-color: #313131;
}

.flex-nav header {
    background-color: #0c0c0c;
}


/* ---Remove footer image--- */

aside .footer {
    display: none;
}

.side-nav .rooms-list {
    height: calc(100% - 0px);
}

.account-box .options {
    height: calc(100% - 0px);
}

.flex-nav .content {
    height: calc(100% - 0px);
}


/* ---Sidebar fixes--- */

.message:hover {
    background-color: #2d2d2d;
}

.flex-nav .input-line input[type='text'], .flex-nav .input-line input[type='password'], .flex-nav .input-line select {
    background-color: #2b2c2f;
}


/* ---User status colors--- */

.user-image.status- .avatar:after {
    background-color: #464646;
}

.user-image.status- .avatar:after, .status-offline, .icon-at.status-offline {
    color: #A0A0A0;
}

.user-image.status-online .avatar:after, .status-online, .icon-at.status-online {
    color: #30d40b;
}

.user-image.status-away .avatar:after, .status-away, .icon-at.status-away {
    color: #fecf09;
}

.user-image.status-busy .avatar:after, .status-busy, .icon-at.status-busy {
    color: #FF1E1E;
}

.main-content header, .cms-page header, .page-container header {
    background-color: #191919;
    border-color: #eaeaea;
}

.main-content {
    background-color: #252525;
}

.message .body {
    color: #CDCDCD;
}

